--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,17 +8,17 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - name: Check out the repository
+        - name: 'Check out the repository'
             uses: actions/checkout@v2
-        - name: Set up Python
+        - name: 'Set up Python'
             uses: actions/setup-python@v2
             with:
                 python-version: '3,10'
-        - name: Install dependencies
+        - name: 'Install dependencies'
             run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
-        - name: Start Flask server
+        - name: 'Start Flask server'
             run: |
                 python server.py & 
                 echo "Waiting for Flask server to start"
