--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   locust-test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
@@ -27,3 +27,6 @@ jobs:
           python server.py & 
           echo "Waiting for Flask server to start"
           sleep 30
+      - name: Run Locust tests
+        run: |
+          locust -u 10000 -r 100 --headless --run-time 2m --host http://localhost:5000
